2000-09-20  Bart Schaefer  <schaefer@zsh.org>

	* 12851, 12852: Completion/Commands/_expand_word,
	Completion/Core/_expand, Doc/Zsh/compsys.yo: Change the way the
	completers are selected for _expand_word; clarify and update doc.

2000-09-20  Andrej Borsenkow <Andrej.Borsenkow@mow.siemens.ru>

	* 12848: Doc/Zsh/zle.yo: Alphabetize list of parameters

	* 12842 with corrections of Bart: Doc/Zsh/contrib.yo: Clarify
	digest file usage.

2000-09-19  Clint Adams  <schizo@debian.org>

	* 12847: Src/builtin.c: dynamically allocate z and buf in
	bin_whence().

	* 12846: Src/.distfiles, Src/mem.c, Src/string.c, Src/utils.c,
	Src/zsh.mdd: Move dupstring(), ztrdup(), tricat(), zhtricat(),
	dyncat(), dupstrpfx(), ztrduppfx(), and appstr() to string.c.

	* 12845: Src/Modules/files.c: dynamically allocate pbuf in domove().

2000-09-18  Andrej Borsenkow <Andrej.Borsenkow@mow.siemens.ru>

	* 12835: Doc/Zsh/compwid.yo: Alphabetize list of special parameters

2000-09-18  Clint Adams  <schizo@debian.org>

	* 12836: Src/Modules/files.c: use ztrdup()/appstr() in lieu of
	statically-allocated buffer in bin_ln.

2000-09-18  Bart Schaefer  <schaefer@zsh.org>

	* 12833: Back out the zasprintf changes from 12814, they're not
	being used any more and they break common builds like SunOS.

2000-09-17  Bart Schaefer  <schaefer@zsh.org>

	* 12829: Src/glob.c, Src/init.c, Src/utils.c: Move dyncat() and
	tricat() to utils.c; rewrite 12814, 12818, 12827 and 12828 for
	less allocation-intensive behavior.

2000-09-18  Clint Adams  <schizo@debian.org>

	* 12828: Src/utils.c: dynamically allocate 'dir' in mailstat.

	* 12827: Src/utils.c: dynamically allocate 'file' in mailstat.

2000-09-17  Clint Adams  <schizo@debian.org>

	* unposted: Src/system.h, Src/utils.c: define mailstat()
	as a macro if MAILDIR_SUPPORT is undefined.

	* 12823: Src/builtin.c, Src/utils.c: use zsh heap instead of
	permanent heap.

	* 12821: Src/builtin.c: bin_dot is now independent of PATH_MAX.
