@@ -1,3 +1,9 @@
+2000-09-22  Clint Adams  <schizo@debian.org>
+
+	* 12859: Src/string.c, Src/Zle/compresult.c:
+	dynamically allocate buffer in ztat, remove
+	duplication loop to ztrdupstrip().
+
 2000-09-20  Bart Schaefer  <schaefer@zsh.org>
 
 	* 12851, 12852: Completion/Commands/_expand_word,
